--- a/AIPSFWP.WebApi/AIPSFWP.DI/AIPSFWP.DI.csproj
+++ b/AIPSFWP.WebApi/AIPSFWP.DI/AIPSFWP.DI.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Contexts\" />
+    <Folder Include="Repositories\Implementations\" />
+    <Folder Include="Repositories\Interfaces\" />
+  </ItemGroup>
+
 </Project>
