--- a/AIPSFWP.WebApi/AIPSFWP.WebApi/appsettings.json
+++ b/AIPSFWP.WebApi/AIPSFWP.WebApi/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "host=localhost;port=5432;database=ProjectAIPSFWP;userid=postgres;password=658692"
+  },
   "AllowedHosts": "*"
 }
