transfer to sqlserver

--- a/AIPSFWP.WebApi/AIPSFWP.WebApi/appsettings.json
+++ b/AIPSFWP.WebApi/AIPSFWP.WebApi/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "host=localhost;port=5432;database=ProjectAIPSFWP;userid=postgres;password=658692"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=projectAIPSFWP;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
