--- a/AIPSFWP.WebApi/AIPSFWP.WebApi/appsettings.json
+++ b/AIPSFWP.WebApi/AIPSFWP.WebApi/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=projectAIPSFWP;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aipsdwpProject;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
